--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -63,7 +63,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Vehicle Car = new Vehicle();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -89,7 +96,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal Fox = new Animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -146,8 +160,38 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Запустить двигатель...\n",
+      "Красный\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get{ return color; }\n",
+    "        set{ color = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void StartEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Запустить двигатель...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle Car = new Vehicle();\n",
+    "Car.Color = \"Красный\";\n",
+    "Car.StartEngine();\n",
+    "Console.WriteLine(Car.Color);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,6 +213,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -236,6 +283,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -261,6 +311,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -320,6 +373,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -345,6 +401,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -404,6 +463,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -429,6 +491,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -503,6 +568,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -528,6 +596,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -641,6 +712,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -666,6 +740,9 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "csharp"
     }
    },
    "outputs": [],
