--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -160,16 +160,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Запустить двигатель...\n",
-      "Красный\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -177,8 +168,8 @@
     "\n",
     "    public string Color\n",
     "    {\n",
-    "        get{ return color; }\n",
-    "        set{ color = value; }\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
     "    }\n",
     "\n",
     "    public void StartEngine()\n",
@@ -206,20 +197,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string size;\n",
+    "\n",
+    "    public string Size\n",
+    "    {\n",
+    "        get { return size; }\n",
+    "        set { size = value; }\n",
+    "    }\n",
+    "\n",
+    "    public void StartHunt()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное охотится...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal Fox = new Animal();\n",
+    "Fox.Size = \"Большое\";\n",
+    "Fox.StartHunt();\n",
+    "Console.WriteLine(Fox.Size);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -276,20 +285,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "myCar.Color = \"Красный\";\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Move();\n",
+    "\n",
+    "myVehicle.Color = \"Синий\";\n",
+    "Console.WriteLine(myVehicle.Color);\n",
+    "myVehicle.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,20 +341,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string size;\n",
+    "\n",
+    "    public string Size\n",
+    "    {\n",
+    "        get { return size; }\n",
+    "        set { size = value; }\n",
+    "    }\n",
+    "    public void Run()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Побежали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Fox : Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "Fox myFox = new Fox();\n",
+    "\n",
+    "myFox.Size = \"Большая\";\n",
+    "Console.WriteLine(myFox.Size);\n",
+    "myFox.Run();\n",
+    "\n",
+    "myAnimal.Size = \"Маленькая\";\n",
+    "Console.WriteLine(myAnimal.Size);\n",
+    "myAnimal.Run();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,20 +431,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспорт двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car: Vehicle\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "myVehicle.Move();\n",
+    "myCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -394,20 +478,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public virtual void Hide()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное прячется\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Cat : Animal\n",
+    "{\n",
+    "    public override void Hide()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кот прячется\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal myAnimal = new Animal();\n",
+    "Cat myCat = new Cat();\n",
+    "\n",
+    "myAnimal.Hide();\n",
+    "myCat.Hide();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,20 +559,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Батарея заряжена...\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Car\n",
+    "{\n",
+    "    public abstract void ChargeBattery();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ElectricCar : Car\n",
+    "{\n",
+    "    public override void ChargeBattery()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Батарея заряжена...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "ElectricCar myElectricCar = new ElectricCar();\n",
+    "\n",
+    "myElectricCar.ChargeBattery();\n",
+    "myElectricCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -491,9 +623,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -568,9 +697,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -596,9 +722,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -712,9 +835,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
@@ -740,9 +860,6 @@
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "csharp"
     }
    },
    "outputs": [],
