--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -160,7 +160,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Запустить двигатель...\n",
+      "Красный\n"
+     ]
+    }
+   ],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -206,7 +215,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное охотится...\n",
+      "Большое\n"
+     ]
+    }
+   ],
    "source": [
     "class Animal\n",
     "{\n",
@@ -294,7 +312,18 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Красный\n",
+      "Поехали...\n",
+      "Синий\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -350,7 +379,18 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Большая\n",
+      "Побежали...\n",
+      "Маленькая\n",
+      "Побежали...\n"
+     ]
+    }
+   ],
    "source": [
     "class Animal\n",
     "{\n",
@@ -440,7 +480,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт двигается\n",
+      "Автомобиль двигается\n"
+     ]
+    }
+   ],
    "source": [
     "class Vehicle\n",
     "{\n",
@@ -487,7 +536,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное прячется\n",
+      "Кот прячется\n"
+     ]
+    }
+   ],
    "source": [
     "class Animal\n",
     "{\n",
@@ -616,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -625,8 +683,40 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кушает...\n",
+      "Охотится...\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void Eating();\n",
+    "\n",
+    "    public void Hunting()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Охотится...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class WildAnimal: Animal\n",
+    "{\n",
+    "    public override void Eating()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кушает...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "WildAnimal myWildAnimal = new WildAnimal();\n",
+    "\n",
+    "myWildAnimal.Eating();\n",
+    "myWildAnimal.Hunting();"
+   ]
   },
   {
    "cell_type": "markdown",
