--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -789,8 +789,50 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Двигатель стартовал\n",
+      "Автомобиль двигается\n",
+      "Двигатель остановлен\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Engine\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Двигатель стартовал\");\n",
+    "    public void Stop() => Console.WriteLine(\"Двигатель остановлен\");\n",
+    "}\n",
+    "\n",
+    "public class Car\n",
+    "{\n",
+    "    private Engine engine;\n",
+    "\n",
+    "    public Car(Engine engine)\n",
+    "    {\n",
+    "        this.engine = engine;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive()\n",
+    "    {\n",
+    "        engine.Start();\n",
+    "\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "\n",
+    "        engine.Stop();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Engine myEngime = new Engine();\n",
+    "Car myAuto = new Car(myEngime);\n",
+    "\n",
+    "myAuto.Drive()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -805,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -814,8 +856,50 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лиса начала охоту\n",
+      "Лиса побежала\n",
+      "Лиса прекратила охоту\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "public class Hunting\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Лиса начала охоту\");\n",
+    "    public void Stop() => Console.WriteLine(\"Лиса прекратила охоту\"); \n",
+    "}\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "    private Hunting hunting;\n",
+    "\n",
+    "    public Animal(Hunting hunting)\n",
+    "    {\n",
+    "        this.hunting = hunting;\n",
+    "    }\n",
+    "\n",
+    "    public void Run()\n",
+    "    {\n",
+    "        hunting.Start();\n",
+    "\n",
+    "        Console.WriteLine(\"Лиса побежала\");\n",
+    "\n",
+    "        hunting.Stop();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Hunting myHunting = new Hunting();\n",
+    "Animal myFox = new Animal(myHunting);\n",
+    "\n",
+    "myFox.Run();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -918,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -927,8 +1011,61 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль двигается...\n",
+      "Игорь управляет транспортом...\n",
+      "Автомобиль двигается...\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Vehicle\n",
+    "{\n",
+    "    public abstract void Drive();\n",
+    "}\n",
+    "\n",
+    "class Car : Vehicle{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Car(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль двигается...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Driver\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Driver(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(Vehicle vehicle)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} управляет транспортом...\");\n",
+    "        vehicle.Drive();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Driver Igor = new Driver(\"Игорь\");\n",
+    "    Car myCar = new Car(Igor);\n",
+    "\n",
+    "    myCar.Drive();\n",
+    "    Igor.Drive(myCar);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -943,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -952,8 +1089,62 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Лиса охотится...\n",
+      "Мадина видит лису...\n",
+      "Лиса охотится...\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "\n",
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void Hunt();\n",
+    "}\n",
+    "\n",
+    "class Fox : Animal\n",
+    "{\n",
+    "    private Hunter hunter;\n",
+    "\n",
+    "    public Fox(Hunter hunter)\n",
+    "    {\n",
+    "        this.hunter = hunter;\n",
+    "    }\n",
+    "\n",
+    "    public override void Hunt()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Лиса охотится...\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Hunter\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Hunter(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Hunt(Animal animal)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} видит лису...\");\n",
+    "        animal.Hunt();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "    Hunter Madina = new Hunter(\"Мадина\");\n",
+    "    Fox myFox = new Fox(Madina);\n",
+    "\n",
+    "    myFox.Hunt();\n",
+    "    Madina.Hunt(myFox);"
+   ]
   }
  ],
  "metadata": {
