--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания №14\n"
    ]
   },
   {
@@ -26,7 +26,12 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n"
+    "Создать базовый класс Supplier в C#, который будет представлять информацию о\n",
+    "поставщиках товаров или услуг. На основе этого класса разработать 2-3\n",
+    "производных класса, демонстрирующих принципы наследования и полиморфизма.\n",
+    "В каждом из классов должны быть реализованы новые атрибуты и методы, а также\n",
+    "переопределены некоторые методы базового класса для демонстрации\n",
+    "полиморфизма.\n"
    ]
   },
   {
@@ -49,8 +54,38 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(20,1): error CS1519: Invalid token '}' in class, record, struct, or interface member declaration",
+     "output_type": "error",
+     "traceback": [
+      "(20,1): error CS1519: Invalid token '}' in class, record, struct, or interface member declaration"
+     ]
+    }
+   ],
+   "source": [
+    "public class Supplier\n",
+    "{\n",
+    "    public int SupplierId;          //атрибуты класса\n",
+    "    public string CompanyName;\n",
+    "    public string ProductType;\n",
+    "\n",
+    "    public Supplier( int supplierid, string companyname,  string producttype)\n",
+    "    {\n",
+    "        SupplierId = supplierid;\n",
+    "        CompanyName = companyname;\n",
+    "        ProductType = producttype;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetCompanyInfo()\n",
+    "    {\n",
+    "        Console.WriteLine(Info);\n",
+    "    }\n",
+    "\n",
+    "    public virtual void \n",
+    "}"
+   ]
   }
  ],
  "metadata": {
