--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -54,16 +54,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(20,1): error CS1519: Invalid token '}' in class, record, struct, or interface member declaration",
-     "output_type": "error",
-     "traceback": [
-      "(20,1): error CS1519: Invalid token '}' in class, record, struct, or interface member declaration"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public class Supplier\n",
     "{\n",
@@ -71,7 +62,7 @@
     "    public string CompanyName;\n",
     "    public string ProductType;\n",
     "\n",
-    "    public Supplier( int supplierid, string companyname,  string producttype)\n",
+    "    public Supplier( int supplierid, string companyname,  string producttype) //конструктор\n",
     "    {\n",
     "        SupplierId = supplierid;\n",
     "        CompanyName = companyname;\n",
@@ -80,11 +71,31 @@
     "\n",
     "    public virtual void GetCompanyInfo()\n",
     "    {\n",
-    "        Console.WriteLine(Info);\n",
+    "        Console.WriteLine($\"ID поставщика: {SupplierId}; Название компании: {CompanyName}; Тип продукции:{ProductType}\");\n",
     "    }\n",
     "\n",
-    "    public virtual void \n",
-    "}"
+    "    public virtual void ProvideQuote()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Предоставить котировку на товар или услугу: {ProductType}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void SubmitOrder()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Отправка заказа поставщику: {SupplierId}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Manufacturer : Supplier\n",
+    "{\n",
+    "    public int FoundedYear;\n",
+    "\n",
+    "    public override void ProvideQuote()\n",
+    "    {\n",
+    "        base.ProvideQuote();\n",
+    "        Console.WriteLine($\"Год основания компании: {FoundedYear}\");\n",
+    "    }\n",
+    "}\n",
+    "\n"
    ]
   }
  ],
