--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -54,48 +54,134 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID поставщика: 3; Название компании: Silent Hill; Тип продукции: Видеоигры\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
+      "Год основания компании 2001.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа по адресу: Детроит\n",
+      "\n",
+      "ID поставщика: 52. Название компании: Балдёж. Тип продукции: Пиво. Страна производства: Норвегия\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n"
+     ]
+    }
+   ],
    "source": [
-    "public class Supplier\n",
+    "class Supplier\n",
     "{\n",
-    "    public int SupplierId;          //атрибуты класса\n",
-    "    public string CompanyName;\n",
-    "    public string ProductType;\n",
-    "\n",
-    "    public Supplier( int supplierid, string companyname,  string producttype) //конструктор\n",
-    "    {\n",
-    "        SupplierId = supplierid;\n",
-    "        CompanyName = companyname;\n",
-    "        ProductType = producttype;\n",
-    "    }\n",
+    "    public int supplierid;\n",
+    "    public string companyname;\n",
+    "    public string producttype;\n",
     "\n",
     "    public virtual void GetCompanyInfo()\n",
     "    {\n",
-    "        Console.WriteLine($\"ID поставщика: {SupplierId}; Название компании: {CompanyName}; Тип продукции:{ProductType}\");\n",
+    "        Console.WriteLine($\"ID поставщика: {supplierid}; Название компании: {companyname}; Тип продукции: {producttype}\");\n",
     "    }\n",
     "\n",
     "    public virtual void ProvideQuote()\n",
     "    {\n",
-    "        Console.WriteLine($\"Предоставить котировку на товар или услугу: {ProductType}\");\n",
+    "        Console.WriteLine(\"Предоставление котировки на товары или услуги.\");\n",
     "    }\n",
     "\n",
     "    public virtual void SubmitOrder()\n",
     "    {\n",
-    "        Console.WriteLine($\"Отправка заказа поставщику: {SupplierId}\");\n",
+    "        Console.WriteLine(\"Отправка заказа поставщику.\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Manufacturer : Supplier\n",
+    "class Manufacturer : Supplier\n",
     "{\n",
-    "    public int FoundedYear;\n",
+    "    public int foundedyear;\n",
     "\n",
     "    public override void ProvideQuote()\n",
     "    {\n",
-    "        base.ProvideQuote();\n",
-    "        Console.WriteLine($\"Год основания компании: {FoundedYear}\");\n",
+    "        Console.WriteLine($\"Год основания компании {foundedyear}.\");\n",
     "    }\n",
     "}\n",
-    "\n"
+    "\n",
+    "class Retailer : Supplier\n",
+    "{\n",
+    "    public string storelocation;\n",
+    "\n",
+    "    public override void SubmitOrder()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Отправка заказа по адресу: {storelocation}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Importer : Supplier\n",
+    "{\n",
+    "    public string origincountry;\n",
+    "\n",
+    "    public override void GetCompanyInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID поставщика: {supplierid}. Название компании: {companyname}. Тип продукции: {producttype}. Страна производства: {origincountry}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "Supplier supplier = new Supplier();\n",
+    "\n",
+    "supplier.supplierid = 3;\n",
+    "supplier.companyname = \"Silent Hill\";\n",
+    "supplier.producttype = \"Видеоигры\";\n",
+    "\n",
+    "supplier.GetCompanyInfo();\n",
+    "supplier.ProvideQuote();\n",
+    "supplier.SubmitOrder();\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "\n",
+    "Manufacturer manufacturer = new Manufacturer();\n",
+    "\n",
+    "manufacturer.foundedyear = 2001;\n",
+    "manufacturer.supplierid = 15;\n",
+    "manufacturer.companyname = \"Biohazard\";\n",
+    "manufacturer.producttype = \"Биологическое оружие\";\n",
+    "\n",
+    "manufacturer.GetCompanyInfo();\n",
+    "manufacturer.ProvideQuote();\n",
+    "manufacturer.SubmitOrder();\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "\n",
+    "Retailer retailer = new Retailer();\n",
+    "\n",
+    "retailer.storelocation = \"Детроит\";\n",
+    "retailer.supplierid = 28;\n",
+    "retailer.companyname = \"CyberLife\";\n",
+    "retailer.producttype = \"Роботы\";\n",
+    "\n",
+    "retailer.GetCompanyInfo();\n",
+    "retailer.ProvideQuote();\n",
+    "retailer.SubmitOrder();\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "\n",
+    "Importer importer = new Importer();\n",
+    "\n",
+    "importer.origincountry = \"Норвегия\";\n",
+    "importer.supplierid = 52;\n",
+    "importer.companyname = \"Балдёж\";\n",
+    "importer.producttype = \"Пиво\";\n",
+    "\n",
+    "importer.GetCompanyInfo();\n",
+    "importer.ProvideQuote();\n",
+    "importer.SubmitOrder();\n"
    ]
   }
  ],
