--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "class Supplier\n",
     "{\n",
-    "    public int supplierid;\n",
+    "    public int supplierid;          //атрибуты класса\n",
     "    public string companyname;\n",
     "    public string producttype;\n",
     "\n",
@@ -130,7 +130,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "\n",
+    "//class supplier\n",
     "Supplier supplier = new Supplier();\n",
     "\n",
     "supplier.supplierid = 3;\n",
@@ -143,7 +143,7 @@
     "\n",
     "Console.WriteLine();\n",
     "\n",
-    "\n",
+    "//class manufacturer\n",
     "Manufacturer manufacturer = new Manufacturer();\n",
     "\n",
     "manufacturer.foundedyear = 2001;\n",
@@ -157,7 +157,7 @@
     "\n",
     "Console.WriteLine();\n",
     "\n",
-    "\n",
+    "//class retailer\n",
     "Retailer retailer = new Retailer();\n",
     "\n",
     "retailer.storelocation = \"Детроит\";\n",
@@ -171,7 +171,7 @@
     "\n",
     "Console.WriteLine();\n",
     "\n",
-    "\n",
+    "//class importer\n",
     "Importer importer = new Importer();\n",
     "\n",
     "importer.origincountry = \"Норвегия\";\n",
