--- a/Sprint1/Task1.ipynb
+++ b/Sprint1/Task1.ipynb
@@ -137,7 +137,78 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    private string _color;\n",
+    "    private int _speed;\n",
+    "\n",
+    "    // Свойство Color с геттером и сеттером\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return _color; }\n",
+    "        set { _color = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Свойство Speed с геттером и сеттером\n",
+    "    public int Speed\n",
+    "    {\n",
+    "        get { return _speed; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _speed = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Скорость не может быть отрицательной!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Статический атрибут\n",
+    "    public static int TotalVehicles { get; private set; } = 0;\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Vehicle()\n",
+    "    {\n",
+    "        TotalVehicles++;\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Accelerate(int delta)\n",
+    "    {\n",
+    "        Speed += delta;\n",
+    "    }\n",
+    "\n",
+    "    // Статический метод\n",
+    "    public static void DisplayTotalVehicles()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество транспортных средств: {TotalVehicles}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int _fuelLevel;\n",
+    "\n",
+    "    // Свойство FuelLevel с геттером и сеттером\n",
+    "    public int FuelLevel\n",
+    "    {\n",
+    "        get { return _fuelLevel; }\n",
+    "        set { _fuelLevel = value; }\n",
+    "    }\n",
+    "\n",
+    "    // Конструктор\n",
+    "    public Car() : base()\n",
+    "    {\n",
+    "        FuelLevel = 100; // Задаем начальный уровень топлива\n",
+    "    }\n",
+    "\n",
+    "    // Обычный метод\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        FuelLevel += amount;\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +233,43 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IAmimal\n",
+    "{\n",
+    "    void Accelerate(int speed);\n",
+    "}\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "    // Атрибуты класса\n",
+    "    public string Color { get; set; }\n",
+    "    protected int Speed { get; set; }\n",
+    "\n",
+    "    public static int TotalAnimals { get; private set; }\n",
+    "\n",
+    "    public Animal()\n",
+    "    {\n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "    // Метод класса\n",
+    "    public void Accelerate(int speed)\n",
+    "    {\n",
+    "        Speed += speed;\n",
+    "    }\n",
+    "}\n",
+    "public class Cat : Animal, IAmimal\n",
+    "{\n",
+    "    public Cat(string color) : base()\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    void IncreaseSpeed()\n",
+    "    {\n",
+    "        Speed += 10; \n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
