--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -111,7 +111,45 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Color { get; set; } // public свойство\n",
+    "    private int speed; // private поле\n",
+    "\n",
+    "    protected void SetSpeed(int value) \n",
+    "    {\n",
+    "        speed = value;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    private int fuelLevel;\n",
+    "\n",
+    "    public void Refuel(int amount) \n",
+    "    {\n",
+    "        fuelLevel += amount;\n",
+    "    }\n",
+    "\n",
+    "    protected void CheckSpeedLimit(int speed) \n",
+    "    {\n",
+    "        if (speed > 120)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Превышен скоростной режим!\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "\n",
+    "myVehicle.Color = \"Red\";\n",
+    "\n",
+    "myCar.Color = \"Blue\";\n",
+    "myCar.Refuel(100);\n",
+    "myCar.Refuel(50);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,8 +173,142 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество животных: 1\n",
+      "Количество животных: 3\n",
+      "Животное\n",
+      "1\n",
+      "Собака\n",
+      "12\n",
+      "Мурка\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    private string _name;\n",
+    "    private int _age;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return _name; }\n",
+    "        set { _name = value; }\n",
+    "    }\n",
+    "\n",
+    "    public int Age\n",
+    "    {\n",
+    "        get { return _age; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _age = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Возраст не может быть отрицательным!\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public static int TotalAnimals { get; private set; } = 0;\n",
+    "\n",
+    "    public Animal()\n",
+    "    {\n",
+    "        TotalAnimals++;\n",
+    "    }\n",
+    "\n",
+    "    public static void DisplayTotalAnimals()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Количество животных: {TotalAnimals}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    private int _iswellfed;\n",
+    "\n",
+    "    public int IsWellFed\n",
+    "    {\n",
+    "        get { return _iswellfed; }\n",
+    "        set { \n",
+    "            if (value >= 0 && value <= 100)\n",
+    "                _iswellfed = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
+    "            }\n",
+    "    }\n",
+    "\n",
+    "    public Dog() : base()\n",
+    "    {\n",
+    "        IsWellFed = 100; \n",
+    "    }\n",
+    "\n",
+    "    public void Feed(int amount)\n",
+    "    {\n",
+    "        if (amount >= 0 && (_iswellfed + amount ) <= 100)\n",
+    "                _iswellfed += amount;\n",
+    "        else\n",
+    "            throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    private int _iswellfed;\n",
+    "\n",
+    "    public int IsWellFed\n",
+    "    {\n",
+    "        get { return _iswellfed; }\n",
+    "        set { \n",
+    "            if (value >= 0 && value <= 100)\n",
+    "                _iswellfed = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
+    "            }\n",
+    "    }\n",
+    "\n",
+    "    public Cat() : base()\n",
+    "    {\n",
+    "        IsWellFed = 100; \n",
+    "    }\n",
+    "\n",
+    "    public void Feed(int amount)\n",
+    "    {\n",
+    "        if (amount >= 0 && (_iswellfed + amount ) <= 100)\n",
+    "                _iswellfed += amount;\n",
+    "        else\n",
+    "            throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Animal animal = new Animal();\n",
+    "\n",
+    "Animal.DisplayTotalAnimals();\n",
+    "\n",
+    "Dog dog = new Dog();\n",
+    "Cat cat = new Cat();\n",
+    "\n",
+    "Animal.DisplayTotalAnimals();\n",
+    "\n",
+    "dog.Name = \"Собака\";\n",
+    "dog.Age = 12;\n",
+    "cat.Name = \"Мурка\";\n",
+    "cat.Age = 3;\n",
+    "animal.Name = \"Животное\";\n",
+    "animal.Age = 1;\n",
+    "\n",
+    "Console.WriteLine(animal.Name);\n",
+    "Console.WriteLine(animal.Age);\n",
+    "\n",
+    "Console.WriteLine(dog.Name);\n",
+    "Console.WriteLine(dog.Age);\n",
+    "\n",
+    "Console.WriteLine(cat.Name);\n",
+    "Console.WriteLine(cat.Age);"
+   ]
   }
  ],
  "metadata": {
